# pytorch

aten/: CMakeLists.txt
aten/src/ATen/: CMakeLists.txt
aten/src/ATen/native/: native_functions.yaml
aten/src/ATen/native/transformers/: attention.cpp  sdp_utils_cpp.h
aten/src/ATen/native/transformers/cuda/: attention.cu  attention_backward.cu  sdp_utils.cpp
aten/src/ATen/native/transformers/cuda/flash_attn/: CMakeLists.txt  epilogue_bwd_sm90_tma.hpp  epilogue_fwd_sm90_tma.hpp  flash.h  flash_api.cpp  flash_api.h  flash_bwd_kernel.h  flash_bwd_launch_template.h  flash_bwd_postprocess_kernel.h  flash_bwd_preprocess_kernel.h  flash_fwd_kernel.h  flash_fwd_launch_template.h  kernel_traits.h  mainloop_bwd_sm90_tma_gmma_ws.hpp  mainloop_fwd_sm90_tma_gmma_ws.hpp  named_barrier.hpp  seq_len.h  softmax.h  static_switch.h  tile_scheduler.hpp  tile_scheduler_bwd.hpp  utils.h
aten/src/ATen/native/transformers/cuda/flash_attn/kernels/: flash_bwd_hdim128_bf16_sm90.cu  flash_bwd_hdim128_fp16_sm90.cu  flash_bwd_hdim64_bf16_sm90.cu  flash_bwd_hdim64_fp16_sm90.cu  flash_bwd_hdim96_bf16_sm90.cu  flash_bwd_hdim96_fp16_sm90.cu  flash_fwd_hdim128_bf16_sm90.cu  flash_fwd_hdim128_e4m3_sm90.cu  flash_fwd_hdim128_fp16_sm90.cu  flash_fwd_hdim256_bf16_sm90.cu  flash_fwd_hdim256_e4m3_sm90.cu  flash_fwd_hdim256_fp16_sm90.cu  flash_fwd_hdim64_bf16_sm90.cu  flash_fwd_hdim64_e4m3_sm90.cu  flash_fwd_hdim64_fp16_sm90.cu
aten/src/ATen/native/transformers/cuda/flash_attn_hopper/: epilogue_bwd_sm90_tma.hpp  epilogue_fwd_sm90_tma.hpp  flash.h  (+14 more)
caffe2/: CMakeLists.txt
torch/csrc/: Module.cpp
(+25 files in other folders)
